# router/greeting.js
@@ -4,7 +4,7 @@ const controller = require('../controller/greeting');
 
 router.get('/birthday',
   /*  #swagger.tags = ['Greetings']
-      #swagger.description = 'Get birthday greetings for users whose birthdays are on the current day. Returns an array of birthday greetings, or an empty array if no users have a birthday. Elder(>49) will get an additional greting picture!'
+      #swagger.description = 'Get birthday greetings for users whose birthdays are on the current day. Returns an array of birthday greetings, or an empty array if no users have a birthday.'
       #swagger.responses[200] = {
           description: 'Success',
           schema: {
@@ -21,12 +21,8 @@ router.get('/birthday',
                               },
                               content: {
                                   type: 'string',
-                                  example: "Happy birthday, dear [Name]! We offer special discount for the following items: [Items]"
+                                  example: "Happy birthday, dear [lastName], [firstName]!"
                               },
-                              image: {
-                                type: 'string',
-                                example: "data:image/png;base64,[base64Image]"
-                              }
                           }
                       }
                   }
